...
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <ScrollView
        android:id="@+id/resultScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="Overdraw">

        <LinearLayout
            android:layout_width="match_parent"
...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="12dp">

                        <TextView
                            android:id="@+id/result_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textIsSelectable="false"
                            android:textSize="27sp"
                            tools:text="20.59" />

                        <TextView
                            android:id="@+id/unit_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="2dp"
                            android:textIsSelectable="false"
                            android:textSize="15sp"
                            tools:text="mg/l" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/warning_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                            android:layout_marginEnd="8dp"
                            android:text=":"
                            android:textSize="17sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/error_margin_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            tools:text="0.5" />
...
                        android:text="@string/color_extracts"
                        android:textAllCaps="true"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/extract_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/analyzed_image"
                        android:minHeight="250dp" />

                </LinearLayout>
...
                        android:text="@string/analyzed_photo"
                        android:textAllCaps="true"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/full_photo_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/analyzed_image"
                        android:minHeight="250dp" />

                </LinearLayout>
...
