...
            android:tag="water"
            android:text="@string/water" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tests_lst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:contentDescription="@string/select_test"
        android:paddingBottom="120dp"
...
